# kcs-installer

./: README.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1676364549446.mjs
src/: App.tsx  router.tsx
src-tauri/: .gitignore  Cargo.toml  settings.toml.bk  tauri.conf.json
src-tauri/src/: db.rs  handler.rs  main.rs
src-tauri/src/handler/: data_ops.rs  download_data.rs  id_system.rs  partitions_mgmt.rs  post_install.rs  sys_config.rs  sys_info.rs
src/components/: head_logo.tsx
src/pages/: download.tsx  home.tsx  install.tsx  select.tsx  select.tsx.bk
