[package]
name = "kcs-installer"
version = "1.0.0"
description = "KOOMPI Content Server Installer in Tauri ReactJS Tailwind SQLite mDNS"
authors = ["IsaacJReay <isaacjacksonreay@gmail.com>"]
license = "custom"
repository = "https://github.com/koompi/kcs-installer"
default-run = "kcs-installer"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "*"
config = "0.13.3"
rusqlite = "*"
once_cell = "*"
block-utils = "*"
sysinfo = "*"
byte-unit = "*"
searchlight = "*"
clap = { version = "*", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
tokio = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = false
